@@ -19,6 +19,8 @@ from __future__ import print_function, unicode_literals, absolute_import, divisi
 
 import six
 
+from sqlalchemy import Column, String, Integer
+
 from reahl.tofu import scenario, Fixture, uses, expected
 from reahl.tofu.pytestsupport import with_fixtures
 
@@ -34,6 +36,8 @@ from reahl.web.bootstrap.forms import Button, FormLayout, InlineFormLayout, Grid
 from reahl.web.bootstrap.grid import ResponsiveSize
 
 from reahl.web_dev.fixtures import WebFixture
+from reahl.sqlalchemysupport import Session, Base
+from reahl.sqlalchemysupport_dev.fixtures import SqlAlchemyFixture
 
 
 @uses(web_fixture=WebFixture)
@@ -270,8 +274,13 @@ def test_adding_checkboxes(web_fixture, form_layout_fixture):
 
 
 class ValidationScenarios(FormLayoutFixture):
-    def new_domain_object(self):
-        class ModelObject(object):
+    def new_ModelObject(self):
+        class ModelObject(Base):
+            __tablename__ = 'model_object'
+            id = Column(Integer, primary_key=True)
+            an_attribute = Column(String)
+            another_attribute = Column(String)
+            
             @exposed
             def fields(self, fields):
                 fields.an_attribute = Field(label='Some input', required=True)
@@ -279,7 +288,7 @@ class ValidationScenarios(FormLayoutFixture):
             @exposed
             def events(self, events):
                 events.submit = Event(label='Submit')
-        return ModelObject()
+        return ModelObject
 
     def new_Form(self):
         fixture = self
@@ -304,70 +313,78 @@ class ValidationScenarios(FormLayoutFixture):
         self.browser = Browser(self.web_fixture.new_wsgi_app(child_factory=self.Form.factory()))
 
 
-@with_fixtures(ValidationScenarios)
-def test_input_validation_cues(validation_scenarios):
+@with_fixtures(SqlAlchemyFixture, ValidationScenarios)
+def test_input_validation_cues(sql_alchemy_fixture, validation_scenarios):
     """Visible cues are inserted to indicate the current validation state
        and possible validation error messages to a user. """
     fixture = validation_scenarios
 
     browser = fixture.browser
-    browser.open('/')
 
-    assert not fixture.get_form_group_highlight_marks(browser, index=0)
-    assert not fixture.get_form_group_errors(browser, index=0)
+    with sql_alchemy_fixture.persistent_test_classes(fixture.ModelObject):
+        fixture.domain_object = fixture.ModelObject()
+        Session.add(fixture.domain_object)
+        browser.open('/')
 
-    browser.type(XPath.input_labelled('Some input'), '')
-    browser.click(XPath.button_labelled('Submit'))
+        assert not fixture.get_form_group_highlight_marks(browser, index=0)
+        assert not fixture.get_form_group_errors(browser, index=0)
 
-    assert ['is-invalid'] == fixture.get_form_group_highlight_marks(browser, index=0)
-    [error] = fixture.get_form_group_errors(browser, index=0)
-    assert error.text == 'Some input is required'
+        browser.type(XPath.input_labelled('Some input'), '')
+        browser.click(XPath.button_labelled('Submit'))
 
-    browser.type(XPath.input_labelled('Some input'), 'valid value')
-    browser.click(XPath.button_labelled('Submit'))
+        assert ['is-invalid'] == fixture.get_form_group_highlight_marks(browser, index=0)
+        [error] = fixture.get_form_group_errors(browser, index=0)
+        assert error.text == 'Some input is required'
 
-    assert ['is-valid'] == fixture.get_form_group_highlight_marks(browser, index=0)
-    assert not fixture.get_form_group_errors(browser, index=0)
+        browser.type(XPath.input_labelled('Some input'), 'valid value')
+        browser.click(XPath.button_labelled('Submit'))
 
-    browser.type(XPath.input_labelled('Another input'), 'valid value')
-    browser.click(XPath.button_labelled('Submit'))
+        assert ['is-valid'] == fixture.get_form_group_highlight_marks(browser, index=0)
+        assert not fixture.get_form_group_errors(browser, index=0)
 
-    assert not fixture.get_form_group_highlight_marks(browser, index=0)
-    assert not fixture.get_form_group_errors(browser, index=0)
+        browser.type(XPath.input_labelled('Another input'), 'valid value')
+        browser.click(XPath.button_labelled('Submit'))
+
+        assert not fixture.get_form_group_highlight_marks(browser, index=0)
+        assert not fixture.get_form_group_errors(browser, index=0)
 
 
-@with_fixtures(WebFixture, ValidationScenarios.with_javascript)
-def test_input_validation_cues_javascript_interaction(web_fixture, javascript_validation_scenario):
+@with_fixtures(WebFixture, SqlAlchemyFixture, ValidationScenarios.with_javascript)
+def test_input_validation_cues_javascript_interaction(web_fixture, sql_alchemy_fixture, javascript_validation_scenario):
     """The visual cues rendered server-side can subsequently be manipulated via javascript."""
     fixture = javascript_validation_scenario
 
     web_fixture.reahl_server.set_app(web_fixture.new_wsgi_app(child_factory=fixture.Form.factory(), enable_js=False))
 
     browser = fixture.browser
-    browser.open('/')
-    browser.type(XPath.input_labelled('Some input'), '')
-    browser.click(XPath.button_labelled('Submit'))
 
-    assert ['is-invalid'] == fixture.get_form_group_highlight_marks(browser, index=0)
-    [error] = fixture.get_form_group_errors(browser, index=0)
-    assert error.text == 'Some input is required'
+    with sql_alchemy_fixture.persistent_test_classes(fixture.ModelObject):
+        fixture.domain_object = fixture.ModelObject()
+        Session.add(fixture.domain_object)
+        browser.open('/')
+        browser.type(XPath.input_labelled('Some input'), '')
+        browser.click(XPath.button_labelled('Submit'))
 
-    web_fixture.reahl_server.set_app(web_fixture.new_wsgi_app(child_factory=fixture.Form.factory(), enable_js=True))
-    browser.open('/')
+        assert ['is-invalid'] == fixture.get_form_group_highlight_marks(browser, index=0)
+        [error] = fixture.get_form_group_errors(browser, index=0)
+        assert error.text == 'Some input is required'
 
-    browser.click(XPath.button_labelled('Submit'))
+        web_fixture.reahl_server.set_app(web_fixture.new_wsgi_app(child_factory=fixture.Form.factory(), enable_js=True))
+        browser.open('/')
 
-    assert ['is-invalid'] == fixture.get_form_group_highlight_marks(browser, index=0)
-    [error] = fixture.get_form_group_errors(browser, index=0)
-    assert error.text == 'Some input is required'
+        browser.click(XPath.button_labelled('Submit'))
 
-    browser.type(XPath.input_labelled('Some input'), 'valid value', trigger_blur=False, wait_for_ajax=False)
-    browser.press_tab()
+        assert ['is-invalid'] == fixture.get_form_group_highlight_marks(browser, index=0)
+        [error] = fixture.get_form_group_errors(browser, index=0)
+        assert error.text == 'Some input is required'
 
-    def form_group_is_marked_success(index):
-        return ['is-valid'] == fixture.get_form_group_highlight_marks(browser, index=index)
-    assert web_fixture.driver_browser.wait_for(form_group_is_marked_success, 0)
-    assert not fixture.get_form_group_errors(browser, index=0)
+        browser.type(XPath.input_labelled('Some input'), 'valid value', trigger_blur=False, wait_for_ajax=False)
+        browser.press_tab()
+
+        def form_group_is_marked_success(index):
+            return ['is-valid'] == fixture.get_form_group_highlight_marks(browser, index=index)
+        assert web_fixture.driver_browser.wait_for(form_group_is_marked_success, 0)
+        assert not fixture.get_form_group_errors(browser, index=0)
 
 
 class CheckboxFixture(Fixture):
@@ -609,11 +626,11 @@ def test_radio_button_label_as_legend(radio_button_fixture):
     inlined_radio = RadioButtonSelectInput(form, fixture.field)
     fixture.form.layout.add_input(inlined_radio)
 
-    field_set = form.children[0]
+    field_set = form.children[-1]
     assert isinstance(field_set, FieldSet)
     assert 'form-group' in field_set.get_attribute('class').split(' ')
 
-    [label_widget, radio_input_in_form] = form.children[0].children
+    [label_widget, radio_input_in_form] = field_set.children
     assert label_widget.tag_name == 'legend'
     assert 'col-form-label' in label_widget.get_attribute('class')
     assert radio_input_in_form is inlined_radio
